--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </form>
         <div class="links">
             <a href="C:\Website_Andre_Firmansyah\lupa_password_1.html">Lupa Password</a>
-            <a href="C:\Website_Andre_Firmansyah\daftar_akun.html">Buat Akun</a>
+            <a href="https://github.com/af133/ANDRE_FIRMANSYAH/blob/main/daftar_akun.html">Buat Akun</a>
         </div>
     </div>
 </body>
