--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <button type="submit">Login</button>
         </form>
         <div class="links">
-            <a href="C:\Website_Andre_Firmansyah\lupa_password_1.html">Lupa Password</a>
+            <a href="https://github.com/af133/ANDRE_FIRMANSYAH/blob/main/lupa_password.html">Lupa Password</a>
             <a href="https://github.com/af133/ANDRE_FIRMANSYAH/blob/main/daftar_akun.html">Buat Akun</a>
         </div>
     </div>
